--- a/Hermes/src/application/application.css
+++ b/Hermes/src/application/application.css
@@ -1,1 +1,39 @@
-/* JavaFX CSS - Leave this comment until you have at least create one rule which uses -fx-Property */
+.parent {
+	-fx-background-color: #3D3D3D;
+}
+
+.close-btn{
+	-fx-background-color: transparent;
+}
+
+.close-btn:hover{
+	-fx-background-color: #646464;
+}
+
+.min-btn{
+	-fx-background-color: transparent;
+}
+
+.min-btn:hover{
+	-fx-background-color: #646464;
+}
+
+.signIn-btn{
+	-fx-background-color: transparent;
+}
+
+.signIn-btn:hover{
+	-fx-background-color: #646464;
+}
+
+.txtfield{
+	-fx-background-color: #646464;
+	-fx-prompt-text-fill: #3D3D3D;
+	-fx-text-fill: #87CEFA;
+}
+
+.txtfield:focused{
+	-fx-background-color: #3D3D3D;
+	-fx-prompt-text-fill: #3D3D3D;
+	-fx-text-fill: #87CEFA;
+}
