--- a/Hermes/src/application/menuGui.fxml
+++ b/Hermes/src/application/menuGui.fxml
@@ -5,6 +5,7 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -223,7 +224,7 @@
                      </children>
                   </VBox>
                </children></Pane>
-            <Pane fx:id="changePasswordPane" layoutX="10.0" layoutY="230.0" prefHeight="200.0" prefWidth="200.0" styleClass="parent" stylesheets="@application.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="220.0">
+            <Pane fx:id="ManageAccountsPane" layoutX="10.0" layoutY="230.0" prefHeight="200.0" prefWidth="200.0" styleClass="parent" stylesheets="@application.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="220.0">
                <children>
                   <VBox alignment="CENTER_LEFT" prefHeight="756.0" prefWidth="500.0" spacing="40.0">
                      <children>
@@ -368,15 +369,6 @@
       </AnchorPane>
       <AnchorPane layoutX="510.0" layoutY="7.0" prefHeight="976.0" prefWidth="1370.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="510.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="24.0">
          <children>
-            <Pane fx:id="reportASickDay" prefHeight="200.0" prefWidth="200.0" styleClass="parent" stylesheets="@application.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-               <children>
-                  <Label prefHeight="40.0" prefWidth="186.0" text="Report a sick day" textFill="LIGHTSKYBLUE">
-                     <font>
-                        <Font size="24.0" />
-                     </font>
-                  </Label>
-               </children>
-            </Pane>
             <Pane fx:id="applyForVaccation" prefHeight="200.0" prefWidth="200.0" styleClass="parent" stylesheets="@application.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                <children>
                   <Label prefHeight="40.0" prefWidth="220.0" text="Apply for vaccation" textFill="LIGHTSKYBLUE">
@@ -396,13 +388,48 @@
                </children>
             </Pane>
             <Pane fx:id="hideMainScreen" prefHeight="200.0" prefWidth="200.0" styleClass="parent" stylesheets="@application.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+            <Pane fx:id="reportASickDay" prefHeight="200.0" prefWidth="200.0" styleClass="parent" stylesheets="@application.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+               <children>
+                  <HBox alignment="CENTER" layoutX="6.0" layoutY="40.0" prefHeight="936.0" prefWidth="1370.0" spacing="50.0">
+                     <children>
+                        <Button fx:id="CallInSickButton" mnemonicParsing="false" onAction="#callInSick" prefHeight="77.0" prefWidth="183.0" styleClass="signIn-btn" stylesheets="@application.css" text="Call in sick" textFill="LIGHTSKYBLUE">
+                           <graphic>
+                              <ImageView fitHeight="60.0" fitWidth="60.0" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                    <Image url="@../../Images/time-8-128.png" />
+                                 </image>
+                              </ImageView>
+                           </graphic>
+                           <font>
+                              <Font name="Calibri Bold" size="18.0" />
+                           </font>
+                        </Button>
+                        <VBox alignment="CENTER" prefHeight="936.0" prefWidth="782.0">
+                           <children>
+                              <TextArea fx:id="commentOnWhySick" prefHeight="200.0" prefWidth="442.0" />
+                              <Label prefHeight="40.0" prefWidth="352.0" text="Comment on why you will stay home today." textFill="LIGHTSKYBLUE">
+                                 <font>
+                                    <Font size="18.0" />
+                                 </font>
+                              </Label>
+                           </children>
+                        </VBox>
+                     </children>
+                  </HBox>
+                  <Label prefHeight="40.0" prefWidth="996.0" text="Report a sick day (You will be marked as absent today if you press the &quot;Call in sick&quot; button )" textFill="LIGHTSKYBLUE">
+                     <font>
+                        <Font size="24.0" />
+                     </font>
+                  </Label>
+               </children>
+            </Pane>
             <Pane fx:id="inOutPane" prefHeight="200.0" prefWidth="200.0" styleClass="parent" stylesheets="@application.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                <children>
-                  <HBox prefHeight="976.0" prefWidth="1370.0" spacing="730.0">
+                  <HBox layoutY="40.0" prefHeight="936.0" prefWidth="1370.0" spacing="730.0">
                      <children>
                         <VBox alignment="CENTER_LEFT" prefHeight="976.0" prefWidth="236.0" spacing="50.0">
                            <children>
-                              <Button mnemonicParsing="false" onAction="#in" prefHeight="72.0" prefWidth="105.0" styleClass="signIn-btn" stylesheets="@application.css" text="IN" textFill="LIGHTSKYBLUE">
+                              <Button fx:id="inButton" mnemonicParsing="false" onAction="#in" prefHeight="72.0" prefWidth="105.0" styleClass="signIn-btn" stylesheets="@application.css" text="IN" textFill="LIGHTSKYBLUE">
                                  <graphic>
                                     <ImageView fitHeight="60.0" fitWidth="60.0" pickOnBounds="true" preserveRatio="true">
                                        <image>
@@ -414,7 +441,7 @@
                                     <Font name="Calibri Bold" size="18.0" />
                                  </font>
                               </Button>
-                              <Button mnemonicParsing="false" onAction="#out" prefHeight="72.0" prefWidth="121.0" styleClass="signIn-btn" stylesheets="@application.css" text="OUT" textFill="LIGHTSKYBLUE">
+                              <Button fx:id="outButton" mnemonicParsing="false" onAction="#out" prefHeight="72.0" prefWidth="121.0" styleClass="signIn-btn" stylesheets="@application.css" text="OUT" textFill="LIGHTSKYBLUE">
                                  <graphic>
                                     <ImageView fitHeight="60.0" fitWidth="60.0" pickOnBounds="true" preserveRatio="true">
                                        <image>
@@ -434,16 +461,24 @@
                               <Insets left="60.0" />
                            </padding>
                         </VBox>
-                        <TableView fx:id="test" prefHeight="976.0" prefWidth="400.0" styleClass="parent" stylesheets="@application.css">
+                        <TableView fx:id="timeReportTableView" prefHeight="902.0" prefWidth="400.0" styleClass="parent" stylesheets="@application.css">
                           <columns>
-                            <TableColumn prefWidth="100.0" text="Date" />
-                            <TableColumn prefWidth="100.0" text="IN" />
-                              <TableColumn prefWidth="100.0" text="OUT" />
-                              <TableColumn prefWidth="100.0" text="Hours" />
+                            <TableColumn fx:id="dateColumn" prefWidth="100.0" text="Date" />
+                            <TableColumn fx:id="inColumn" prefWidth="100.0" text="IN" />
+                              <TableColumn fx:id="outColumn" prefWidth="100.0" text="OUT" />
+                              <TableColumn fx:id="hoursColumn" prefWidth="100.0" text="Hours" />
                           </columns>
                         </TableView>
                      </children>
+                     <padding>
+                        <Insets bottom="20.0" right="20.0" top="20.0" />
+                     </padding>
                   </HBox>
+                  <Label prefHeight="40.0" prefWidth="996.0" text="Stamp In or out (In the table to the right can you see the time report for this month )" textFill="LIGHTSKYBLUE">
+                     <font>
+                        <Font size="24.0" />
+                     </font>
+                  </Label>
                </children>
             </Pane>
          </children></AnchorPane>
