--- a/Hermes/src/application/menuGui.fxml
+++ b/Hermes/src/application/menuGui.fxml
@@ -190,40 +190,6 @@
                      </children>
                   </VBox>
                </children></Pane>
-            <Pane fx:id="salarySlipPane" layoutX="10.0" layoutY="230.0" prefHeight="200.0" prefWidth="200.0" styleClass="parent" stylesheets="@application.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="220.0">
-               <children>
-                  <VBox alignment="CENTER_LEFT" prefHeight="756.0" prefWidth="500.0" spacing="40.0">
-                     <padding>
-                        <Insets left="150.0" />
-                     </padding>
-                     <children>
-                        <Button mnemonicParsing="false" prefHeight="77.0" prefWidth="165.0" styleClass="signIn-btn" stylesheets="@application.css" text="Salary slip" textFill="LIGHTSKYBLUE">
-                           <graphic>
-                              <ImageView fitHeight="60.0" fitWidth="60.0" pickOnBounds="true" preserveRatio="true">
-                                 <image>
-                                    <Image url="@../../Images/coins-128.png" />
-                                 </image>
-                              </ImageView>
-                           </graphic>
-                           <font>
-                              <Font name="Calibri Bold" size="18.0" />
-                           </font>
-                        </Button>
-                        <Button mnemonicParsing="false" onAction="#back" prefHeight="77.0" prefWidth="124.0" styleClass="signIn-btn" stylesheets="@application.css" text="Back" textFill="LIGHTSKYBLUE">
-                           <graphic>
-                              <ImageView fitHeight="60.0" fitWidth="60.0" pickOnBounds="true" preserveRatio="true">
-                                 <image>
-                                    <Image url="@../../Images/arrow-65-128.png" />
-                                 </image>
-                              </ImageView>
-                           </graphic>
-                           <font>
-                              <Font name="Calibri Bold" size="18.0" />
-                           </font>
-                        </Button>
-                     </children>
-                  </VBox>
-               </children></Pane>
             <Pane fx:id="ManageAccountsPane" layoutX="10.0" layoutY="230.0" prefHeight="200.0" prefWidth="200.0" styleClass="parent" stylesheets="@application.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="220.0">
                <children>
                   <VBox alignment="CENTER_LEFT" prefHeight="756.0" prefWidth="500.0" spacing="40.0">
@@ -290,6 +256,40 @@
                      <padding>
                         <Insets left="150.0" />
                      </padding>
+                  </VBox>
+               </children></Pane>
+            <Pane fx:id="salarySlipPane" layoutX="10.0" layoutY="230.0" prefHeight="200.0" prefWidth="200.0" styleClass="parent" stylesheets="@application.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="220.0">
+               <children>
+                  <VBox alignment="CENTER_LEFT" prefHeight="756.0" prefWidth="500.0" spacing="40.0">
+                     <padding>
+                        <Insets left="150.0" />
+                     </padding>
+                     <children>
+                        <Button fx:id="generateSalarySlipButton" mnemonicParsing="false" onAction="#generateSalarySlip" prefHeight="78.0" prefWidth="237.0" styleClass="signIn-btn" stylesheets="@application.css" text="Generate salary slip" textFill="LIGHTSKYBLUE">
+                           <graphic>
+                              <ImageView fitHeight="60.0" fitWidth="60.0" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                    <Image url="@../../Images/coins-128.png" />
+                                 </image>
+                              </ImageView>
+                           </graphic>
+                           <font>
+                              <Font name="Calibri Bold" size="18.0" />
+                           </font>
+                        </Button>
+                        <Button mnemonicParsing="false" onAction="#back" prefHeight="77.0" prefWidth="124.0" styleClass="signIn-btn" stylesheets="@application.css" text="Back" textFill="LIGHTSKYBLUE">
+                           <graphic>
+                              <ImageView fitHeight="60.0" fitWidth="60.0" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                    <Image url="@../../Images/arrow-65-128.png" />
+                                 </image>
+                              </ImageView>
+                           </graphic>
+                           <font>
+                              <Font name="Calibri Bold" size="18.0" />
+                           </font>
+                        </Button>
+                     </children>
                   </VBox>
                </children></Pane>
             <Pane fx:id="mainMenuPain" layoutX="10.0" layoutY="230.0" prefHeight="200.0" prefWidth="200.0" styleClass="parent" stylesheets="@application.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="220.0">
@@ -480,7 +480,7 @@
                         <Font size="24.0" />
                      </font>
                   </Label>
-                  <HBox alignment="CENTER" layoutY="40.0" prefHeight="936.0" prefWidth="1370.0" spacing="200.0">
+                  <HBox alignment="CENTER" layoutY="40.0" prefHeight="936.0" prefWidth="1370.0" spacing="20.0">
                      <children>
                         <TableView fx:id="timeReportTableView1" editable="true" prefHeight="896.0" prefWidth="482.0" styleClass="parent" stylesheets="@application.css">
                            <columns>
@@ -491,18 +491,22 @@
                               <TableColumn fx:id="absentColumn1" prefWidth="75.0" text="Absent" />
                            </columns>
                         </TableView>
-                        <Button fx:id="SaveEditWorkingHours" mnemonicParsing="false" onAction="#SaveEditWorkingHoursAction" prefHeight="72.0" prefWidth="199.0" styleClass="signIn-btn" stylesheets="@application.css" text="Save changes" textFill="LIGHTSKYBLUE">
-                           <graphic>
-                              <ImageView fitHeight="60.0" fitWidth="60.0" pickOnBounds="true" preserveRatio="true">
-                                 <image>
-                                    <Image url="@../../Images/save-128.png" />
-                                 </image>
-                              </ImageView>
-                           </graphic>
-                           <font>
-                              <Font name="Calibri Bold" size="18.0" />
-                           </font>
-                        </Button>
+                        <VBox alignment="BOTTOM_CENTER" prefHeight="896.0" prefWidth="253.0">
+                           <children>
+                              <Button fx:id="SaveEditWorkingHours" mnemonicParsing="false" onAction="#SaveEditWorkingHoursAction" prefHeight="72.0" prefWidth="199.0" styleClass="signIn-btn" stylesheets="@application.css" text="Save changes" textFill="LIGHTSKYBLUE">
+                                 <graphic>
+                                    <ImageView fitHeight="60.0" fitWidth="60.0" pickOnBounds="true" preserveRatio="true">
+                                       <image>
+                                          <Image url="@../../Images/save-128.png" />
+                                       </image>
+                                    </ImageView>
+                                 </graphic>
+                                 <font>
+                                    <Font name="Calibri Bold" size="18.0" />
+                                 </font>
+                              </Button>
+                           </children>
+                        </VBox>
                      </children>
                      <padding>
                         <Insets bottom="20.0" right="20.0" top="20.0" />
@@ -510,6 +514,14 @@
                   </HBox>
                </children>
             </Pane>
+            <Pane fx:id="generateSalarySlip" prefHeight="200.0" prefWidth="200.0" styleClass="parent" stylesheets="@application.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+               <children>
+                  <Label prefHeight="40.0" prefWidth="302.0" text="Salary slip for your next pay" textFill="LIGHTSKYBLUE">
+                     <font>
+                        <Font size="24.0" />
+                     </font>
+                  </Label>
+               </children></Pane>
          </children></AnchorPane>
    </children>
 </AnchorPane>
